<resources>
    <string name="app_name">Калькулятор каллорий</string>

    <string name="textViewStart">Добро пожаловать в калькулятор калорий для сотрудников мирового суда г. Салават!</string>
    <string name="textViewStart2">Это простое и удобное приложение, которое поможет рассчитать необходимое количество калорий. </string>
    <string name="textViewStart3">Узнайте, сколько калорий вам нужно употреблять в день для поддержания текущего веса, похудения или набора веса.</string>
    <string name="textViewStart4">Начнем расчет!</string>

    <string name="age">Возраст (лет):</string>
    <string name="enter_age">Введите свой возраст</string>
    <string name="gender">Пол:</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="weight">Вес (кг):</string>
    <string name="enter_weight">Введите свой вес</string>
    <string name="height">Рост (см)</string>
    <string name="enter_height">Введите свой рост</string>
    <string name="activity_level">Уровень активности</string>
    <string-array name="activity_levels">
        <item>Отсутствует активность</item>
        <item>Лёгкая активность  (1–3 дня в неделю)</item>
        <item>Средняя активность (3–5 дней в неделю)</item>
        <item>Высокая активность (6–7 дней в неделю)</item>
        <item>Экстремально-высокая активность</item>
    </string-array>
    <string name="formula">Формула</string>
    <string name="mifflin_sanj">Миффлина - Сан Жеора</string>
    <string name="harris_benedict">Харриса - Бенедикта</string>
    <string name="calculate">Рассчитать</string>
    <string name="result">Сколько нужно калорий в день для:</string>
    <string name="maintenance_calories"> Сохранения массы:</string>
    <string name="weight_loss_calories">Похудения:</string>
    <string name="weight_gain_calories">Набора массы:</string>
    <string name="result_maintenance">Сохранения массы: %d</string>
    <string name="result_loss">Похудения: %d</string>
    <string name="result_gain">Набора массы: %d</string>

</resources>
