<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/uncolor4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Назад"
                android:background="@drawable/style_button_calcmain"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_age"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"/>

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <TextView
                android:id="@+id/textViewWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_weight"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_height"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewActivityLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_level"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"/>

            <Spinner
                android:id="@+id/spinnerActivityLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/textViewFormula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formula"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <RadioGroup
                android:id="@+id/radioGroupFormula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMifflinSanJeor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mifflin_sanj" />

                <RadioButton
                    android:id="@+id/radioButtonHarrisBenedict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harris_benedict" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_calcmain"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/textViewResultTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textViewMaintenance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maintenance_calories"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLoss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_loss_calories"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textViewGain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_gain_calories"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
